<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="com.example.kevin.ribbit.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage" />

    <TextView
        android:id="@id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@id/subTitle"
        style="@style/AuthSubTitle" />

    <LinearLayout
        android:id="@id/linearLayout"
        style="@style/AuthLinearLayout">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/hint_username"
            style="@style/AuthEditText">

            <requestFocus />
            </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_password"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/emailField"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            style="@style/AuthEditText" />

    </LinearLayout>



    <Button
        android:id="@+id/signupButton"
        android:text="@string/text_button_signup"
        style="@style/AuthButton" />

</RelativeLayout>
