<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    tools:context="com.example.kevin.ribbit.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:id="@+id/subTitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/subTitle"
        android:id="@+id/linearLayout"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:background="@android:color/white">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/hint_username"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/hint_password"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp"/>

        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/text_button_login"
        android:id="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linearLayout"
        android:textSize="13sp"
        android:textColor="@color/text_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        android:textColor="@android:color/white"
        android:id="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</RelativeLayout>
